HTML and CSS textbook
random notes

--- a/Practice/test.html
+++ b/Practice/test.html
@@ -75,8 +75,27 @@
   <td>94</td>
 </tr>
 </table>
+<hr />
+
+<h2> Attributes and Text </h2>
+<p>
+Attributes provide additional information about the contents of an element. This is a <sup> Subscript </sup> <br>
+
+Line <br> Lol. <hr />
+Themes. <address> address element contains <ins>address</ins> </address>
+</p>
+
+<h3> Lists</h3>
+
+<ol>
+	<li> ordered list here</li>
+	<li> another </li>
+</ol>
+
+
+<p> We want to open a link in a new page, use the target = __blank thing. Figure and figure caption. We also have tables. Forms. Password input.  </p>
 
 
 
 </body>
-</html
+</html>
